@@ -49,7 +49,7 @@ int isis_event_dis_status_change (struct thread *thread);
 #define AUTH_ERROR_TYPE_LSP   3
 #define AUTH_ERROR_TYPE_SNP   2
 #define AUTH_ERROR_TYPE_HELLO 1
-void isis_event_auth_failure (char *area_tag, char *error_string,
+void isis_event_auth_failure (char *area_tag, const char *error_string,
 			      u_char *sysid);
 
 #endif /* _ZEBRA_ISIS_EVENTS_H */
